--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 body{
   background-image: url("/media/smooth-black-concrete-wall-background.jpg");
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: cover;
-  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
