--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body{
   background-image: url("/media/smooth-black-concrete-wall-background.jpg");
-  background-repeat: repeat;
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: 100% 200%;
   display: flex;
   align-items: center;
   justify-content: center;
