--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,12 @@
   color: white;
   background: linear-gradient(135deg,rgba(255, 255, 255, 0),rgba(255, 255, 255, 0));
   backdrop-filter: blur(10px);
-  max-height: 100vh;
+  max-height: 200vh;
   -webkit-backdrop-filter: blur(10px);
   box-shadow:0 4px 8px 1px rgba(0, 0, 0, 0.383)  ;
 }
 .mainchatlist{
-  height: 60vh;
+  min-height: 60vh;
   overflow:scroll ;
   overflow-x: hidden;
 }
