--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,10 @@
 }
 @media (max-width: 768px) {
   .contain {
-    min-width: 100vw; /* Full width for mobile screens */
-    max-height: 100vh; /* You can adjust the height if needed */
-    padding: 0; /* Remove any extra padding for mobile */
-    box-shadow: none; /* Optionally reduce shadow for mobile for a cleaner look */
+    min-width: 100vw; 
+    max-height: 100vh;
+    padding: 0;
+   overflow-x: hidden;
   }
 }
 .mainchatlist{
